# comMS

./: .gitignore  CONTRIBUTING.md  NOTICE  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
.github/workflows/: pr-tests.yaml
docs/: commands.md  config-reference.md  configuration.md  output-structure.md
src/comms/: __init__.py  __main__.py  config.toml  main.py
src/comms/cli/: cli.py  config.py  convert.py  index.py  lfq.py  license.py  pipeline.py  quantify.py  report.py  rescore.py  search.py  setup.py  uninstall.py  version.py
src/comms/commands/: config.py  convert.py  experiment.py  index.py  lfq.py  license.py  pipeline.py  quantify.py  report.py  rescore.py  search.py  setup.py  uninstall.py  version.py
src/comms/gui/: app.py  main_window.py  status.py
src/comms/r/: install_deps.R
src/comms/utils/: context.py  crux.py  download.py  fasta.py  log.py  paths.py  readiness.py  samples.py  settings.py  sheet.py  trfp.py  validate.py
tests/: TESTS.md  conftest.py
tests/ext/motif/: conftest.py  test_meme.py  test_motif_inputs.py
tests/fixtures/: generate_fixtures.py
tests/integration/: test_convert.py  test_crux.py  test_pipeline.py  test_trfp.py
tests/r/: helper.R  test_utils_import.R  test_utils_normalise.R
tests/unit/: test_config.py  test_context.py  test_download.py  test_experiment.py  test_fasta.py  test_lfq.py  test_parammedic.py  test_paths.py  test_report.py  test_rescore.py  test_samples.py  test_settings.py  test_uninstall.py  test_validate.py  test_version.py
tests/unit/gui/: test_gui_models.py  (+3 more)
(+36 files in other folders)
