[project]
name = "comms"
version = "0.1.3"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Sam Holland", email = "hol_sam@icloud.com" }
]
requires-python = ">=3.14"
dependencies = [
    "platformdirs>=4.9.6",
    "rich>=15.0.0",
    "typer>=0.24.1",
]

[project.scripts]
comms = "comms:main"

[build-system]
requires = ["uv_build>=0.11.2,<0.12.0"]
build-backend = "uv_build"
